# code-for-review

./: README.md
clang-parser/: .gitignore  CMakeLists.txt  defs.h  driver.cc  gen-pb.sh  gennm_ir.proto  pb_printer.cc  utils.cc
clang-parser/analysis/: cfg.cc  cfg_builder.cc  gennm_ir.cc  ir_builder.cc
clang-parser/include/: ast_visitor_interface.hh  cfg.hh  cfg_builder.hh  cfg_naive_sampler_visitor.hh  cfg_print_visitor.hh  cfg_visitor.hh  dbg_config.hh  ir_builder.hh  pb_printer.hh  utils.hh
clang-parser/include/ir/: gennm_ir.hh  gennm_ir_print_visitor.hh  gennm_ir_visitor.hh
clang-parser/py-scripts/: preproc_decompiled_file.py
eval/: combine_names.py  dump_cls_name_topk.py  dump_ft_name_topk.py  eval_cls_name.py  eval_convert_metrics.py  eval_gen_name.py  eval_stats.py  eval_utils.py  eval_varbert_name.py  gen_hints.py  naive_combination.py  utils.py
ft-models/: train-cls-model.sh  train-gen-model.sh  train-stem-model.sh
ft-models/gennm_code/: gen_dataset_with_hints.py  gen_hints.py  mark_func_in_train.py  mix_hint_dataset.py  name_utils.py
ft-models/src/gennm_model/: __init__.py  gennm_modeling.py
ft-models/src/llmtuner/dsets/: preprocess.py
inference/model/: binary_prog.py  gennm_classifier.py  gennm_utils.py  gennm_wrapper.py
inference/scripts/: ask_binaries_fewshot.py  ask_binaries_zeroshot.py  combine_parsed_results.py  dump_decompiled_code.py  dump_fewshot_examples.py  infer_cls_model.py  infer_gen_model.py  name_utils.py  preproc_binaries.py  prop_names.py
name_validation/: prop_names.py
preprocess/: binary_prog.py  dedup_dataset.py
sympo/: eval_utils.py  gen_sympo.py
(+13 files in other folders)
